Complete Payment Processing Page and responsiveness

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -255,6 +255,21 @@
   .detail-payment-right h4 {
     font-size: 1em;
   }
+  .payment-processing-page {
+    width: 275px;
+    padding: @space-sm;
+    margin-top: 60px;
+  }
+  .cc-image {
+    width: 35px;
+    margin: -48px 5px 0 0; 
+  }
+  .payment-processing-info button {
+    margin: -10px 0 0;
+  }
+  .payment-processing-page label {
+    font-size: .8em;
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
@@ -437,6 +452,13 @@
   .detail-payment-right button {
     width: 260px;
     font-size: 1.5em;
+  }
+  .payment-processing-page {
+    width: 475px;
+    padding: @space-md
+  }
+  .payment-processing-info button {
+    margin: -10px 0 0;
   }
 }
 
