--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -492,6 +492,10 @@
 	.detail-payment-right button {
 		width: 425px;
 	}
+	/* -- Payment Processing Page -- */
+	.payment-processing-page {
+		width: 740px;
+	}
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
