added edit album/song pages

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -220,6 +220,26 @@
     color: white;
     cursor: pointer;
   }
+  // -- Album edit --
+  .edit-album-content {
+    min-width: 100%;
+  }
+  .edit-content-wrapper {
+    max-width: 250px;
+  }
+  .edit-list-wrapper {
+    border: none;
+    margin: 0 15px;
+  }
+  .edit-album-detail-wrapper {
+    width: 100%;
+    padding: @space-md 15px;
+  }
+  .album-edit-img {
+    width: 325px;
+    height: 325px;
+    margin-left: 0;
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
