--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -482,6 +482,9 @@
       -moz-tranfrom: scale(1.08);
       transform: scale(1.08);
     }
+    .edit-album-detail {
+    	padding-left: @space-lg;
+  	}
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -502,5 +505,9 @@
 	}
 	.library-result-table table th:nth-child(4), .library-result-table table th:nth-child(7) {
 		display: none;
+	}
+	// -- edit album --
+	.edit-album-content {
+		padding-left: 0;
 	}
 }
