--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -17,6 +17,9 @@ h1, .h1 {
     filter: @drop-1;
     -webkit-filter: @drop-1;
 }
+h3 {
+    font-family: @font-reg;
+}
 h2, .h2 {
     font-size: 36px;
 }
