fixed css merge issues

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -220,7 +220,6 @@
     color: white;
     cursor: pointer;
   }
-<<<<<<< HEAD
   // -- Album edit --
   .edit-album-content {
     min-width: 100%;
@@ -240,8 +239,8 @@
     width: 325px;
     height: 325px;
     margin-left: 0;
-=======
-
+  }
+    
   /* -- Detailed Payment Options -- */
   .detail-payment-option-mobile {
     display: block;
@@ -290,7 +289,6 @@
   }
   .payment-processing-page label {
     font-size: .8em;
->>>>>>> stage
   }
 }
 
