--- a/assets/styles/variables.less
+++ b/assets/styles/variables.less
@@ -35,6 +35,7 @@
 @drop-3: inset 0 1px 1px rgba(0,0,0,.075);
 @drop-4: 1px 1px 4px 0px rgba(0, 0, 0, 0.6);  /* example: profile img */
 @drop-5: 0 0 6px 0 rgba(0, 0, 0, 0.3);  /* example: nav bars */
+@drop-6: -8px 8px 30px @grey-1;
 
 @bd-rad-sm: 3px;
 @bd-rad-md: 8px;
