Create Creator downloads page UI fully responsive

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -290,6 +290,35 @@
   .payment-processing-page label {
     font-size: .8em;
   }
+  /* -- Creator Downloads -- */
+    .creator-downloads {
+    width: 290px;
+  }
+  .creator-downloads-songs {
+    width: 290px;
+    height: 145px;
+    margin: 15px 0;
+    display: block;
+  }
+  .creator-downloads-song-img {
+    width: 145px;
+  }
+  .creator-downloads-song-info {
+    width: 145px;
+    padding-left: @space-sm;
+    padding-top: 30px;
+    h2 {font-size: 1.5em;
+        margin-bottom: 30px}
+    h3 {font-size: 1.2em;}
+    h5 {font-size: 0.8em;}
+    p {
+      font-size: 0.7em;
+      margin-top: @space-md;
+    }
+    .icon-down-circled {
+      display: none;
+    }
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
@@ -479,6 +508,31 @@
   }
   .payment-processing-info button {
     margin: -10px 0 0;
+  }
+  /* -- Creator Downloads -- */
+    .creator-downloads {
+    width: 470px;
+  }
+  .creator-downloads-songs {
+    width: 470px;
+    height: 235px;
+    margin: 15px 0;
+    display: block;
+  }
+  .creator-downloads-song-img {
+    width: 235px;
+  }
+  .creator-downloads-song-info {
+    width: 235px;
+    padding-left: @space-md;
+    h2 {font-size: 2em;
+        margin-top: @space-sm;}
+    h3 {font-size: 1.5em;}
+    h5 {font-size: 1.05em;}
+    p {
+      font-size: 0.8em;
+      margin-top: @space-md;
+    }
   }
 }
 
