added creator profile page
changed playlist table content

--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -26,6 +26,13 @@
 	.library-result-table table th:nth-child(4), .library-result-table table th:nth-child(7) {
 		display: none;
 	}
+	// -- creator profile --
+	.playlist-wrapper table th:nth-child(3), .playlist-wrapper table th:nth-child(4), .playlist-wrapper table th:nth-child(6) {
+		display: none;
+	}
+	.playlist-wrapper table td:nth-child(3), .playlist-wrapper table td:nth-child(4), .playlist-wrapper table td:nth-child(6) {
+		display: none;
+	}
 
 	/* Artist Profile */
 	.header-wrapper {
