syncing for new cloud front url

--- a/assets/styles/colors.less
+++ b/assets/styles/colors.less
@@ -60,3 +60,6 @@
 	background: linear-gradient(135deg,  rgba(80,227,194,1) 0%,rgba(163,248,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50e3c2', endColorstr='#a3f8ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
+.brown {
+    color: #c99144;
+}
