--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -190,4 +190,10 @@ textarea.form-input {
 .btn [class^="icon-"]:before, .btn [class*=" icon-"]:before {
     margin: 0;
 }
+.ui-autocomplete {
+    width: 200px;
+}
+.ui-menu-item {
+    width: 200px;
+}
 /* END Form Styles */
