staged additional artist in submit

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -154,6 +154,15 @@
 .upload-mobile-hidden {
 	display: block;
 }
+.additional-artist ul li {
+	border: 1px solid @grey-5;
+	padding: @space-sm;
+	margin-bottom: @space-sm;
+}
+	.additional-artist p {
+		margin: 0;
+		padding: 0 @space-sm;
+	}
 .album-list-wrapper {
 	border: 1px solid @grey-3;
 	z-index: 100px;
