--- a/assets/styles/edit-track.less
+++ b/assets/styles/edit-track.less
@@ -30,6 +30,7 @@
 	.edit-list-wrapper li {
 	  padding: @space-md 0;
 	  width: 100%;
+    box-shadow: @drop-3;
 	}
 		.edit-list-active {
 			background-color: @white;
@@ -47,7 +48,7 @@
   .cancel-function {
 	display: inline-block;
 	color: @grey-3;
-	padding-top: 45px;
+	margin-top: 30px; 
   }
 .edit-track-detail p {
   line-height: @space-sm;
