--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -229,7 +229,7 @@
   }
   .edit-list-wrapper {
     border: none;
-    margin: 0 15px;
+    margin: 0;
   }
   .edit-album-detail-wrapper {
     width: 100%;
