--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -39,7 +39,9 @@ ol, ul {
     margin: 0;
     padding: 0;
 }
-
+.italic {
+    font-style: italic;
+}
 .spacer {
 	display: block;
 	padding: 10px;
