--- a/assets/styles/edit-track.less
+++ b/assets/styles/edit-track.less
@@ -102,3 +102,36 @@ span.lyric-link {
 	font-family: @font-reg;
 	display: inline;
 }
+// -- song detail --
+.song-detail-wrapper {
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px solid @grey-4;
+    box-shadow: @drop-2;
+}
+.song-detail-chart-wrapper {
+    border-bottom: 1px solid @grey-4;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,.2);
+}
+.song-detail-artist-detail {
+    display: inline-block;
+    vertical-align: middle;
+}
+    .song-detail-icons  {
+        padding-top: @space-lg;
+    }
+        .song-detail-icons i {
+            padding-right: @space-lg;
+        }
+    .song-detail-artist-detail h4 {
+        font-family: @font-reg;
+    }       
+.song-detail-img {
+  width: 110px;
+  height: 110px;
+  display: inline-block;
+}
+.song-detail-chart {
+    transform: scale(.95);
+}
