--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -2,6 +2,9 @@
 
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
+  h4 {
+    font-size: 14px;
+  }
 
 	/* System Level Nav Menu */
 	.filter-menu {
@@ -318,6 +321,18 @@
     .icon-down-circled {
       display: none;
     }
+  }
+  // -- song detail --
+  .song-detail-img {
+    width: 80px;
+    height: 80px;
+  }
+  .song-detail-icons i {
+    font-size: 25px;
+    padding-right: @space-md;
+  }
+  .song-detail-icons {
+    // padding-right: @space-md;
   }
 }
 
