Create Artist Search No Results pop up

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -319,6 +319,23 @@
       display: none;
     }
   }
+  /* -- Artist Search No Results -- */
+  .artist-search-no-results {
+    padding: 0;
+  }
+  .artist-search-no-results-header {
+    width: 300px;
+    h2 {
+      font-size: 2em;
+    }
+    h4 {
+      font-size: 1em;
+    }
+  }
+  .artist-search-no-results-suggestions img {
+    width: 70px;
+    height: 70px;
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
@@ -532,6 +549,17 @@
     p {
       font-size: 0.8em;
       margin-top: @space-md;
+    }
+  }
+
+  /* -- Artist Search No Results -- */
+  .artist-search-no-results-header {
+    width: 400px;
+    h2 {
+      font-size: 2em;
+    }
+    h4 {
+      font-size: 1em;
     }
   }
 }
