--- a/assets/styles/artist-search.less
+++ b/assets/styles/artist-search.less
@@ -8,6 +8,11 @@
 	margin: 10px;
 	border-radius: 0px;
 }
+.artist-search-results-table-header {
+	color: @grey-3;
+	padding-left: @space-md;
+	border-bottom: 2px solid @grey-5;
+}
 .artist-search-tags-list li {
 	text-align: left;
 	border: none;
@@ -23,11 +28,65 @@
 	padding: 0 15px 0 0;
 	margin-left: 15px;
 }
-.artist-search-table-header-items h4 {
-	margin: 10px 0 30px;
+.artist-search-table-header-items {
+	padding-left: 0;
 }
 .artist-search-mobile-view-wrapper {
 	margin-top: 40px;
 	position: absolute;
 	display: none;
+}
+.artist-search-no-results-header {
+	width: 775px;
+	margin: @space-sm auto;
+	text-align: center;
+	color: @white;
+	h4 {
+		font-family: @font-reg
+	}
+}
+#hide-me {
+  -webkit-animation: hide 1.0s forwards;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-delay: 7s;
+  animation: hide 1.0s forwards;
+  animation-iteration-count: 1;
+  animation-delay: 7s;
+  position: relative;
+}
+@-webkit-keyframes hide {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    left: -9999px;
+    height: 0;
+    width: 0;
+    margin: 0;
+    padding: 0; 
+  }
+}
+@keyframes hide {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    left: -9999px;
+    height: 0;
+    width: 0;
+    margin: 0;
+    padding: 0; 
+  }
+}
+.artist-search-no-results-suggestions img {
+	width: 100px;
+	height: 100px;
+}
+.artist-search-no-results-suggestions td, .artist-search-no-results-suggestions th {
+	padding: @space-sm;
+}
+.table-icons {
+	text-align: center
 }
