added song detail page

--- a/assets/styles/creator-profile.less
+++ b/assets/styles/creator-profile.less
@@ -3,8 +3,6 @@
 .creator-youtube-wrapper {
   overflow: hidden;
   overflow: scroll;
-  border-bottom: 1px solid @grey-4;
-  // margin-bottom: 50px;
 }
 
 .creator-youtube-list {
@@ -54,6 +52,7 @@ a.video-nav-next {
 .creator-profile-tags-wrapper {
     font-family: @font-reg;
     border-bottom: 1px solid @grey-4;
+    border-top: 1px solid @grey-4;
 }
     .creator-profile-tags-wrapper p {
         color: @grey-3;
