--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -330,6 +330,11 @@
   .top-album-wrapper {
     padding-top: @space-lg;
   }
+  .creator-love-img {
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+	}
 }
 
 @media (max-width: 991px) {
@@ -558,6 +563,14 @@
 			margin-left: 8px;
 		}
 	}
+	.creator-love-wrapper ul li:nth-child(7), .creator-love-wrapper ul li:nth-child(8), {
+		display: none;
+	}	
+	 .creator-love-wrapper ul li:nth-child(4), .creator-love-wrapper ul li:nth-child(5), 
+	 .creator-love-wrapper ul li:nth-child(6), .creator-love-wrapper ul li:nth-child(7), 
+	 .creator-love-wrapper ul li:nth-child(8), {
+    display: none;
+  }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -604,5 +617,9 @@
 			font-size: 0.8em;
 			margin-top: -10px;
 		}
+	}
+	.creator-love-wrapper ul li:nth-child(7), .creator-love-wrapper ul li:nth-child(8) 
+	{
+		display: none;
 	}
 }
