--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -623,20 +623,16 @@
 			margin-top: -10px;
 		}
 	}
-	/* -- Artist Search No Results -- */
+	/* -- Artist Search Results -- */
 	.artist-search-no-results-header {
 		width: 650px;
 	}
-	.artist-search-no-results-suggestions img {
-		width: 80px;
-		height: 80px;
+	.artist-search-table-row h4 {
+		font-size: 1.1em;
 	}
-	.artist-search-table-track-artist {
-		h3 {
-			font-size: 1.35em;
-		}
-		h5 {
-			font-size: 0.9em;
-		}
-	}
+	.artist-search-album-img  {
+	width: 85px;
+	height: 85px;
+	margin-top: @space-sm;
+}
 }
