--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -339,7 +339,7 @@
   .artist-search-no-results-suggestions img {
     width: 70px;
     height: 70px;
-
+  }
   // -- song detail --
   .song-detail-img {
     width: 80px;
@@ -351,6 +351,33 @@
   }
   .song-detail-icons {
     // padding-right: @space-md;
+  }
+  /* -- IPSY PAGES -- */
+  .ipsy-sign-up-main-content img {
+    max-width: 270px;
+    margin: -10px 0 15px;
+    // height: auto;
+  }
+  .ipsy-sign-up-content header {
+    width: 310px;
+    margin: 10px auto 0;
+  }
+  .ipsy-login {
+    margin: 5px 0 10px
+  }
+  .ipsy-connect-google-btn {
+    margin: 0 0 5px;
+  }
+  .ipsy-main-content {
+    width: 310px;
+  }
+  .ipsy-paragraphs {
+    font-size: 1.05em;
+    margin-left: 5px;
+  }
+  .fancy-font {
+    font-size: 3em;
+    margin-top: 5px;
   }
 }
 
@@ -558,10 +585,16 @@
   .creator-downloads-song-info {
     width: 235px;
     padding-left: @space-md;
-    h2 {font-size: 2em;
-        margin-top: @space-sm;}
-    h3 {font-size: 1.5em;}
-    h5 {font-size: 1.05em;}
+    h2 {
+      font-size: 2em;
+        margin-top: @space-sm;
+      }
+    h3 {
+      font-size: 1.5em;
+      }
+    h5 {
+      font-size: 1.05em;
+      }
     p {
       font-size: 0.8em;
       margin-top: @space-md;
@@ -578,5 +611,11 @@
       font-size: 1em;
     }
   }
+
+  /* -- IPSY PAGES -- */
+  .ipsy-main-content {
+    width: 430px;
+  }
 }
-}
+
+
