--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -153,7 +153,9 @@ ol, ul {
 .display-false {
     display: none;
 }
-
+.primary {
+    color: @primary;
+}
 .divider {
     border-bottom: 1px solid @grey-5;
     margin: 40px -40px 40px;
