Create artist library home sidebar

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -163,20 +163,24 @@ ol, ul {
 .content, .content-with-sidebar  {
     height: 100%;
     width: 100%;
-    padding: 40px;
+    padding: 50px 30px 40px 70px;
     background: @white;
+    display: inline-block;
 }
 .content-with-sidebar {
-    float: left;
-    margin-left: 260px;
+    // float: left;
+    margin-left: 250px;
     width: ~"calc(100% - 260px)";
+    min-height: 854px;
 }
-.sidebar {
-    width: 260px;
-    float: left;
-    padding: 20px;
-    position: absolute;
-}
+/* -- Commented out to fix issues with sidebar on artist library home -- */
+// .sidebar {
+//     width: 260px;
+//     // float: left;
+//     padding: 20px;
+//     display: inline-block;
+//     // position: absolute;
+// }
 
 .table.no-borders td {
     border: none;
