--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -5,63 +5,34 @@
 	display: inline-block;
 }
 .artist-internal-sidebar-wrapper {
-	background-color: #FAFAFA;
+	width: 280px;
+	padding-bottom: 60px;
 	display: inline-block;
-	margin-right: 30px;
-	padding-bottom: 100%;
-	width: 250px;
+	overflow: hidden;
+	position: absolute;
+	left: 0;
+	background-color: @grey-6;
 }
-
-.artist-internal-download-count,
-.artist-internal-play-count,
-.artist-internal-top-interest {
-	font-family: @font-reg;
-	border-bottom: 1px solid @grey-6;
-	padding: 20px 0;
-
-	h3 {
-		font-family: @font-md;
-		margin-bottom: 15px;
-	}
-	span {
-		color: @grey-3;
-	}
-	h2 {
-		color: @primary;
-		margin-top: -10px;
-	}
+.artist-internal-sidebar h3 {
+	font-family: @font-md
 }
-
+.artist-internal-sidebar h2 {
+	margin-top: -10px;
+	font-family: @font-reg
+}
+.artist-internal-sidebar p, .artist-internal-sidebar h4 {
+	font-family: @font-reg
+}
+.artist-internal-sidebar-spin-count,
+.artist-internal-sidebar-pick-ups,
+.artist-internal-sidebar-top-interests {
+	border-bottom: 2px solid @grey-5
+}
 .artist-internal-top-interest-img {
 	width: 60px;
 	-webkit-border-radius: @bd-rad-circle;
 	-moz-border-radius: @bd-rad-circle;
 	border-radius: @bd-rad-circle;
-}
-.artist-internal-top-interest li {
-	margin: 5px 0 5px -15px;
-	padding: 0;
-
-	h4 {
-		margin-top: 15px;
-	}
-}
-.artist-internal-top-regions {
-	padding-top: 20px;
-
-	span {
-		color: @grey-3;
-	}
-	h3 {
-		margin-bottom: 20px;
-	}  
-	h4 {
-		font-family: @font-reg;
-		margin-bottom: 10px;
-	}
-	li {
-		margin: 10px 0 10px -25px;
-	} 
 }
 
 // .artist-upload-wrapper {
