--- a/assets/styles/footer.less
+++ b/assets/styles/footer.less
@@ -6,7 +6,7 @@
   position: relative;
   background-color: #2D3743;
   display: inline-block;
-  right: 0;
+  bottom: 0;
   left: 0;
   color: white;
 
