--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -590,6 +590,29 @@
 			font-size: 0.9em;
 		}
 	}
+
+	/* -- Admin Dashboard -- */
+	.admin-dashboard {
+		width: 720px;
+		margin: 40px auto;
+	}
+	.admin-dashboard-box {
+		width: 330px;
+		height: 140px;
+		margin: 15px;
+		border-radius: 0.05rem;
+		box-shadow: @drop-4;
+	}
+	.admin-dashboard-box .icon {
+		margin: 10px 10px 15px 0;
+	}
+	.admin-dashboard-box .title {
+		font-size: 1.8em;
+	}
+	.large-toolbox-text {
+		font-size: 2.35em;
+		margin-top: 30px;
+	}
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
