wired up featured artist

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -206,7 +206,9 @@ ol, ul {
     width: 100%;
     height: 100%;
 }
-
+.red {
+  color: #FF3547;
+}
 .mobile-img-thumbnail {
   height: 75px;
   width: 75px;
