passing artist submit back to jeremy

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -132,6 +132,12 @@
 			display: inline-block;
 		}
 	}
+	.info-tags {
+		font-size: 10px;
+	}
+	.genre-tag-selector-wrapper {
+		padding: 0 5px;
+	}
 	.submit-btns {
 		text-align: right;
 	}
@@ -153,6 +159,9 @@
 		height: 40px;
 		background-color: @grey-5;
 		padding: @space-sm @space-md;
+		p{
+			text-overflow: ellipsis;
+		}
 		p, i {
 			display: inline-block;
 		}
