Wire up mini artist dashboard

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -4,6 +4,8 @@
 .upload-form-wrapper {
 	display: inline-block;
 }
+
+/* -- SideBar -- */
 .artist-internal-sidebar-wrapper {
 	width: 280px;
 	padding-bottom: 60px;
@@ -30,6 +32,7 @@
 }
 .artist-internal-top-interest-img {
 	width: 60px;
+	height: 60px;
 	-webkit-border-radius: @bd-rad-circle;
 	-moz-border-radius: @bd-rad-circle;
 	border-radius: @bd-rad-circle;
